--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My News</string>
+    <string name="action_settings">Settings</string>
+    <string name="addFeed">add feed</string>
+    <string name="add">add</string>
+    <string name="dellete">del</string>
 </resources>
